--- a/medicine/medicine.css
+++ b/medicine/medicine.css
@@ -168,6 +168,13 @@ body {
   background-color: #2b612b;
 }
 
+footer {
+  text-align: center;
+  padding: 20px;
+  color: #777;
+  margin-top: 100px;
+  font-size: 14px;
+}
 /* mobile response */
 
 @media (max-width: 768px) {
