--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+:root {
+  --primary-color: #5d00a1;
+  --action-color: #387b38;
+  --background-light: #f7f7f7;
+  --text-dark: #333;
+  --text-medium: #777;
+  --back-button-bg: #8e24aa;
+}
+
 .loader-overlay {
   position: fixed;
   top: 0;
@@ -5,12 +14,10 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.9);
-  
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 1000;
-
   transition: opacity 0.3s ease;
 }
 
@@ -30,7 +37,6 @@ body {
   background: #ffffff;
 }
 
-/* Top Navbar */
 .navbar {
   width: 100%;
   background: #4b008b;
@@ -47,7 +53,6 @@ body {
   font-weight: bold;
 }
 
-/* Login Box */
 .login-container {
   width: 360px;
   margin: 80px auto;
@@ -184,21 +189,56 @@ footer {
 }
 
 @media (max-width: 480px) {
+  .navbar {
+    padding: 15px 20px;
+  }
+
+  .navbar-title {
+    font-size: 24px;
+  }
+
   .login-container {
     width: 100%;
     margin: 0;
     padding: 20px;
     border-radius: 0;
     box-shadow: none;
-    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     min-height: calc(100vh - 58px);
+    box-sizing: border-box;
   }
 
-  .navbar {
-    padding: 12px 20px;
+  .form-group {
+    padding: 0;
   }
 
-  .navbar-title {
-    font-size: 24px;
+  .form-group input {
+    padding: 14px;
+    margin-bottom: 20px;
+  }
+
+  .login-btn,
+  .register-btn,
+  .reset-btn {
+    width: 100%;
+    padding: 15px;
+    font-size: 17px;
+  }
+
+  .checkbox-area {
+    width: 100%;
+    padding: 0;
+    margin-bottom: 25px;
+  }
+
+  .secondary-action {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  footer {
+    margin-top: 50px;
+    padding-bottom: 30px;
   }
 }
